# NoteApp_Note_Command_Service

./: Cargo.toml  Makefile  README.md  docker-compose-for-eventstore.yaml  docker-compose-for-kafka.yaml
src/: main.rs
src/models/: basic_info_of_note_changed_event_model.rs  change_basic_info_note_command_model.rs  change_parent_of_note_command_model.rs  command_model.rs  create_note_command_model.rs  event_model.rs  mod.rs  note_created_event_model.rs  parent_of_note_changed_event_model.rs
src/service/: mod.rs  web_server.rs
src/services/: eventstore_service.rs  kafka_service.rs  mod.rs  web_server.rs
src/settings/: app_settings.yaml  mod.rs
