[package]
name = "noteapp_note_command_service"
version = "0.1.0"
authors = ["CG <abc@abc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
env_logger = "0.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
eventstore = "1"
futures = "0.3"
thiserror = "1"
kafka = "0.8"